# oceano

./: CMakeLists.txt  README.md  refine_mesh.h
Advection_Jacobi_MF/: Advection.cc  CMakeLists.txt  advection_operator.h  equation_data.h  parameter-file.prm  runtime_parameters.h
Euler_SSP/: CMakeLists.txt  Euler_SSP.cc  equation_data.h  euler_operator.h  parameter-file.prm  runtime_parameters.h
IMEX_DG_SW/: CMakeLists.txt  SW_DG.cc  SW_operator.h  equation_data.h
IMEX_DG_SW/FULL_NON_CONSERVATIVE_H/WB_Smooth/: SW_DG.cc  SW_operator.h  equation_data.h  output.txt  runtime_parameters.h  solution-00000.vtu  solution-00250.vtu
IMEX_DG_SW/FULL_NON_CONSERVATIVE_ZETA/WB_Smooth/: SW_DG.cc  SW_operator.h  solution-00000.vtu  solution-00250.vtu
IMEX_DG_SW/FULL_NON_CONSERVATIVE_ZETA_DEPTH_NODES/WB_Smooth/: SW_DG.cc  output.txt  parameter-file.prm  solution-00000.vtu  solution-00250.vtu
IMEX_DG_SW/FULL_NON_CONSERVATIVE_ZETA_DEPTH_NODES_POLYNOMIAL/WB_Smooth/: SW_DG.cc  SW_operator.h  equation_data.h  solution-00000.vtu  solution-00250.vtu
IMEX_DG_SW/FULL_NON_CONSERVATIVE_ZETA_DRY/WB_Smooth/: SW_DG.cc  SW_operator.h  equation_data.h  output.txt  solution-00000.vtu  (+1 more)
lib/: CMakeLists.txt
lib/include/: RungeKuttaIntegrator.h.debug
lib/source/: Euler.cc  EulerDG.cc  IcbcBase.cc  LaxFriedrichsModified.cc  LowStorageRungeKuttaIntegrator.cc  RungeKuttaIntegrator.cc.debug
oceano/: CMakeLists.txt
oceano/source/: main.cc
tests/channelFlow/: channelFlow.prm  channelFlow_10x2cells.msh
tests/shallowWaterVortex/: shallowWaterVortex.prm  shallowWaterVortex_20x10cells.msh
(+60 files in other folders)
